Opened 12 years ago

Closed 12 years ago

#3711 closed defect (fixed)

has_b_frames is larger in decoder than demuxer

Reported by: miguelapg Owned by:
Priority: normal Component: undetermined
Version: git-master Keywords: h264
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:

Since a couple of releases ago, I am seeing this issue.

Numerous messages are shown like that ...

[Parsed_pad_1 @ 0000000002c39480] Direct padding impossible allocating new frame
[h264 @ 0000000000302560] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)

How to reproduce:

"D:\\ffmpeg.exe" -i "J:\\transformersageofextinction-tlr2_h1080p.mov" -vcodec rawvideo -pix_fmt yuv420p -s 1920x1080 -r 24000/1001 -filter:v "scale=1920:-1,pad=1920:1080:(ow-iw)/2:(oh-ih)/2,unsharp=3:3:0.4:3:3:0.4" -an -y "J:\\transformersageofextinction-tlr2_h1080p.yuv"

VERSION: Latest Zeranoe FFmpeg Build Version: git-958168d (2014-06-09) 64-bit Static

ffmpeg version N-63861-g958168d Copyright (c) 2000-2014 the FFmpeg developers
  built on Jun  9 2014 22:09:41 with gcc 4.8.2 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-avisynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxavs --enable-libxvid --enable-decklink --enable-zlib

Video file source is at upload.ffmpeg.org/incoming and filename is: transformersageofextinction-tlr2_h1080p.mov

Attachments (3)

ffmpeg-20140610-114934.log (1.1 MB ) - added by miguelapg 12 years ago.
has_b_frames is larger in decoder than demuxer_cut.ts (2.4 MB ) - added by Carl Eugen Hoyos 12 years ago.
transformersageofextinction-tlr2_h1080p_cut.mov (1000.0 KB ) - added by Carl Eugen Hoyos 12 years ago.

Change History (5)

by miguelapg, 12 years ago

Attachment: ffmpeg-20140610-114934.log added

by Carl Eugen Hoyos, 12 years ago

comment:1 by Carl Eugen Hoyos, 12 years ago

Keywords: h264 added; has_b_frames larger decoder demuxer removed
Version: unspecifiedgit-master
$ ffmpeg -i has_b_frames\ is\ larger\ in\ decoder\ than\ demuxer_cut.ts -f null -t 0.5 -
ffmpeg version N-63863-g2351ea8 Copyright (c) 2000-2014 the FFmpeg developers
  built on Jun 10 2014 13:53:29 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      52. 89.100 / 52. 89.100
  libavcodec     55. 66.100 / 55. 66.100
  libavformat    55. 42.101 / 55. 42.101
  libavdevice    55. 13.101 / 55. 13.101
  libavfilter     4.  7.100 /  4.  7.100
  libswscale      2.  6.100 /  2.  6.100
  libswresample   0. 19.100 /  0. 19.100
  libpostproc    52.  3.100 / 52.  3.100
[NULL @ 0x2a66920] start time for stream 3 is not set in estimate_timings_from_pts
[mpegts @ 0x2a60c20] PES packet size mismatch
Input #0, mpegts, from 'has_b_frames is larger in decoder than demuxer_cut.ts':
  Duration: 00:00:10.24, start: 171.504678, bitrate: 1999 kb/s
  Program 3
    Stream #0:0[0x1ff]: Video: h264 (High) ([27][0][0][0] / 0x001B), yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], 25 fps, 25 tbr, 90k tbn, 50 tbc
    Stream #0:1[0x120](eng): Audio: aac_latm ([17][0][0][0] / 0x0011), 48000 Hz, stereo, fltp
    Stream #0:2[0x121](eng): Audio: aac_latm ([17][0][0][0] / 0x0011), 48000 Hz, stereo, fltp (visual impaired)
    Stream #0:3[0x180](eng): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006)
Output #0, null, to 'pipe:':
  Metadata:
    encoder         : Lavf55.42.101
    Stream #0:0: Video: rawvideo (I420 / 0x30323449), yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], q=2-31, 200 kb/s, 25 fps, 90k tbn, 25 tbc
    Metadata:
      encoder         : Lavc55.66.100 rawvideo
    Stream #0:1(eng): Audio: pcm_s16le, 48000 Hz, stereo, s16, 1536 kb/s
    Metadata:
      encoder         : Lavc55.66.100 pcm_s16le
Stream mapping:
  Stream #0:0 -> #0:0 (h264 (native) -> rawvideo (rawvideo))
  Stream #0:1 -> #0:1 (aac_latm (native) -> pcm_s16le (pcm_s16le))
Press [q] to stop, [?] for help
[null @ 0x2b3d760] Encoder did not produce proper pts, making some up.
[h264 @ 0x2a54760] Reinit context to 1920x1088, pix_fmt: yuv420p
[h264 @ 0x2a54fa0] number of reference frames (0+5) exceeds max (4; probably corrupt input), discarding one
[h264 @ 0x2a54fa0] reference picture missing during reorder
[h264 @ 0x2a54fa0] Missing reference picture, default is 65568
[mpegts @ 0x2a60c20] DTS 15586624 < 15593824 out of order
[h264 @ 0x2a54fa0] reference picture missing during reorder
[h264 @ 0x2a54fa0] Missing reference picture, default is 65568
[h264 @ 0x2a54fa0] reference picture missing during reorder
[h264 @ 0x2a54fa0] Missing reference picture, default is 65568
[h264 @ 0x2a54fa0] reference picture missing during reorder
[h264 @ 0x2a54fa0] Missing reference picture, default is 65568
[h264 @ 0x2a54fa0] reference picture missing during reorder
[h264 @ 0x2a54fa0] Missing reference picture, default is 65568
[h264 @ 0x2a4e780] mmco: unref short failure
[h264 @ 0x2a54fa0] reference picture missing during reorder
[h264 @ 0x2a54fa0] Missing reference picture, default is 65568
[h264 @ 0x2a67260] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x2a67260] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
frame=   13 fps=0.0 q=0.0 Lsize=N/A time=00:00:00.52 bitrate=N/A
video:1kB audio:94kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: unknown
$ ffmpeg -i transformersageofextinction-tlr2_h1080p_cut.mov -f null -t 0.1 -
ffmpeg version N-63863-g2351ea8 Copyright (c) 2000-2014 the FFmpeg developers
  built on Jun 10 2014 13:53:29 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      52. 89.100 / 52. 89.100
  libavcodec     55. 66.100 / 55. 66.100
  libavformat    55. 42.101 / 55. 42.101
  libavdevice    55. 13.101 / 55. 13.101
  libavfilter     4.  7.100 /  4.  7.100
  libswscale      2.  6.100 /  2.  6.100
  libswresample   0. 19.100 /  0. 19.100
  libpostproc    52.  3.100 / 52.  3.100
[mov,mp4,m4a,3gp,3g2,mj2 @ 0x31dac20] Concatenated H.264 or H.265 might not play correctly.
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'transformersageofextinction-tlr2_h1080p_cut.mov':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    creation_time   : 2014-05-14 06:32:04
    timecode        : 01:00:00:00
  Duration: 00:02:30.15, start: 0.000000, bitrate: 54 kb/s
    Stream #0:0(eng): Video: h264 (Main) (avc1 / 0x31637661), yuv420p(tv, bt709), 1920x816, 9216 kb/s, 23.98 fps, 23.98 tbr, 24k tbn, 48k tbc (default)
    Metadata:
      creation_time   : 2014-05-14 06:32:04
      handler_name    : Apple Video Media Handler
      encoder         : H.264
    Stream #0:1(eng): Data: none (tmcd / 0x64636D74), 0 kb/s (default)
    Metadata:
      creation_time   : 2014-05-14 06:32:04
      handler_name    : Time Code Media Handler
      timecode        : 01:00:00:00
    Stream #0:2(eng): Audio: aac (mp4a / 0x6134706D), 44100 Hz, stereo, fltp, 125 kb/s (default)
    Metadata:
      creation_time   : 2014-05-14 06:32:04
      handler_name    : Apple Sound Media Handler
Output #0, null, to 'pipe:':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    timecode        : 01:00:00:00
    encoder         : Lavf55.42.101
    Stream #0:0(eng): Video: rawvideo (I420 / 0x30323449), yuv420p, 1920x816, q=2-31, 200 kb/s, 23.98 fps, 90k tbn, 23.98 tbc (default)
    Metadata:
      creation_time   : 2014-05-14 06:32:04
      handler_name    : Apple Video Media Handler
      encoder         : Lavc55.66.100 rawvideo
    Stream #0:1(eng): Audio: pcm_s16le, 44100 Hz, stereo, s16, 1411 kb/s (default)
    Metadata:
      creation_time   : 2014-05-14 06:32:04
      handler_name    : Apple Sound Media Handler
      encoder         : Lavc55.66.100 pcm_s16le
Stream mapping:
  Stream #0:0 -> #0:0 (h264 (native) -> rawvideo (rawvideo))
  Stream #0:2 -> #0:1 (aac (native) -> pcm_s16le (pcm_s16le))
Press [q] to stop, [?] for help
[null @ 0x31de6a0] Encoder did not produce proper pts, making some up.
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
[h264 @ 0x3215440] has_b_frames is larger in decoder than demuxerIf you want to help, upload a sample of this file to ftp://upload.ffmpeg.org/incoming/ and contact the ffmpeg-devel mailing list. (ffmpeg-devel@ffmpeg.org)
frame=    3 fps=0.0 q=0.0 Lsize=N/A time=00:00:00.12 bitrate=N/A
video:0kB audio:17kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: unknown

comment:2 by Michael Niedermayer, 12 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.