ffmpeg: for h264 we need has_b_frames from the decoder

Other solutions welcome

Fixes Ticket3711

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>